--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <title>Elementos de texto</title>
 </head>
 <body>
+    <div>
     <h2>Parrafo #1</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero autem cupiditate natus ut ipsam et corporis voluptatibus nam veritatis excepturi, quas officiis fuga dolore vitae, sit veniam, facilis saepe rerum.</p>
+    </div>
+    <div>
     <h2>Parrafo #2</h2>
-    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero autem cupiditate natus ut ipsam</div><div> et corporis voluptatibus nam veritatis excepturi, quas officiis fuga dolore vitae, sit veniam, facilis saepe rerum.</div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero autem cupiditate natus ut ipsam</p><p> et corporis voluptatibus nam veritatis excepturi, quas officiis fuga dolore vitae, sit veniam, facilis saepe rerum.</p>
+    </div>
+    <div>
     <h2>Parrafo #3</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero autem cupiditate <br/> natus ut ipsam et corporis voluptatibus nam veritatis excepturi, quas officiis fuga dolore vitae, sit veniam, facilis saepe rerum.</p>
+    </div>
+    <div>
     <h2>Parrafo #4</h2>
     <pre>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero autem cupiditate natus ut ipsam et corporis voluptatibus nam veritatis excepturi, quas officiis fuga dolore vitae, sit veniam, facilis saepe rerum.</pre>
+    </div>
+
 
 </body>
 </html>
